--- a/app/_components/app/geojson-card/styles.css
+++ b/app/_components/app/geojson-card/styles.css
@@ -1,11 +1,12 @@
-.ag-theme-quartz-custom {
-    --ag-foreground-color: rgb(126, 46, 132);
-    --ag-background-color: rgb(249, 245, 227);
-    --ag-header-foreground-color: rgb(204, 245, 172);
-    --ag-header-background-color: rgb(209, 64, 129);
-    --ag-odd-row-background-color: rgb(0, 0, 0, 0.03);
-    --ag-header-column-resize-handle-color: rgb(126, 46, 132);
+.ag-theme-quartz-custom.ag-theme-quartz-custom {
+    --ag-background-color: #fff;
+    --ag-foreground-color: #181d1f;
+    --ag-header-background-color: #9ac5df;
+    --ag-icon-font-color: color-mix(in srgb, transparent, var(--ag-foreground-color) 90%);
 
-    --ag-font-size: 17px;
-    --ag-font-family: monospace;
+    --ag-odd-row-background-color: #9ac5df;
+    --ag-tooltip-background-color: var(--ag-header-background-color);
+
+    --ag-font-size: 14px;
+    --ag-font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
