--- a/app/_components/app/geojson-card/styles.css
+++ b/app/_components/app/geojson-card/styles.css
@@ -1,3 +1,17 @@
+.ag-tooltip.ag-tooltip{
+    --tw-bg-opacity: 1;
+    background-color: rgb(118 129 129 / var(--tw-bg-opacity));
+    color: #fff;
+    border-radius: 6px;
+    border-width: 0px;
+    border-style: none;
+    border-color: #545454;
+    padding-left: 0.75rem/* 12px */;
+    padding-right: 0.75rem/* 12px */;
+    padding-top: 0.375rem/* 6px */;
+    padding-bottom: 0.375rem/* 6px */;
+ }
+
 .ag-theme-quartz-custom.ag-theme-quartz-custom {
     --ag-background-color: #fff;
     --ag-foreground-color: #181d1f;
@@ -5,7 +19,8 @@
     --ag-icon-font-color: color-mix(in srgb, transparent, var(--ag-foreground-color) 90%);
 
     --ag-odd-row-background-color: #9ac5df;
-    --ag-tooltip-background-color: var(--ag-header-background-color);
+    --ag-border-radius: 6px;
+    --ag-borders: solid 1px;
 
     --ag-font-size: 14px;
     --ag-font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
